# silabs_blue_gecko_cmake_example

./: CMakeLists.build_emdrv.txt  CMakeLists.build_emlib.txt  CMakeLists.gecko_toolchain.txt  CMakeLists.txt  LICENSE  README.md  config.h.in
emdrv_config/: ecc_config.h  trace_config.h
gatt_db/: CMakeLists.txt  gatt.bgproj  gatt.xml
gcc/: startup_efr32mg1p.S
src/: CMakeLists.txt  InitDevice.c  InitDevice.h  main.c
